--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ buildscript {
         classpath "org.springframework:spring-jdbc:$springVersion"
 
         //this is for processing the index.html at compile time
-        classpath "com.github.alfio-event:alf.io-public-frontend:$alfioPublicFrontendVersion"
+        classpath "com.github.pgtn:alf.io-public-frontend:$alfioPublicFrontendVersion"
         classpath "ch.digitalfondue.jfiveparse:jfiveparse:0.8.1"
         //
     }
@@ -165,7 +165,7 @@ dependencies {
     compile 'ch.digitalfondue.basicxlsx:basicxlsx:0.5.1'
     compile 'org.imgscalr:imgscalr-lib:4.2'
 
-    compile "com.github.alfio-event:alf.io-public-frontend:$alfioPublicFrontendVersion"
+    compile "com.github.pgtn:alf.io-public-frontend:$alfioPublicFrontendVersion"
 
     testCompile 'com.opentable.components:otj-pg-embedded:0.13.3'
 
