--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Tue, 07 Apr 2015 22:45:24 +0200
 group=alfio
-version=2.0-M3-2009-SNAPSHOT
+version=warnax-develop
 
 sourceCompatibility=11
 targetCompatibility=11
